# fool-engine

./: .gitignore  Cargo.toml  config.toml  engine.sh  packtool.sh  readme.md  script.sh
.cargo/: config.toml
assets/: core_mod.lua  exit.lua  graphics.lua  init_mod.lua  lua_thread.lua  main.lua  shape.lua  ui.lua
assets/engine/: engine.d.lua  log.lua  sprite.lua  timer.lua  utils.lua
assets/engine/color/: rgba8.lua
assets/engine/define/: audio.d.lua  egui.d.lua  engine.d.lua  engine_base.d.lua  event.d.lua  graphics.d.lua  physics.d.lua  sprite.d.lua  window.d.lua
assets/engine/input/: key.lua  mouse.lua
assets/engine/vector2/: point.lua  rect.lua  size.lua  transform.lua
engine/: Cargo.toml
engine/src/: engine_log.rs  lib.rs  main.rs  utils.rs
engine/src/event/: mod.rs
engine/src/graphics/: draw.rs  types.rs  window.rs
engine/src/gui/: binding.rs  mod.rs  types.rs
engine/src/input/: mod.rs
engine/src/lua/: memmod.rs  mod.rs  types.rs  zipmod.rs
engine/src/physics/: event.rs  hooks.rs  mod.rs
engine/src/resource/: lua.rs  mod.rs  types.rs
fool-audio/: Cargo.toml
fool-audio/src/: lib.rs  main.rs
fool-audio/src/effect/: mod.rs
fool-audio/src/group/: mod.rs
fool-engine/: Cargo.toml
fool-engine/src/: lib.rs  main.rs  scheduler.rs  utils.rs
fool-engine/src/config/: base.rs  mod.rs  utils.rs  window.rs
fool-engine/src/engine/: event.rs  mod.rs  script.rs  status.rs
fool-engine/src/event/: engine.rs  input.rs  mod.rs
fool-engine/src/graphics/: mod.rs  types.rs  window.rs
fool-engine/src/gui/: binding.rs  mod.rs  types.rs
fool-engine/src/lua/: mod.rs  types.rs
fool-engine/src/lua/graphics/: draw.rs  window.rs
fool-engine/src/lua/gui/: binding.rs  macros.rs  mod.rs  types.rs
fool-engine/src/physics/: hooks.rs  mod.rs  types.rs
fool-engine/src/resource/: fallback.rs  lua.rs  mod.rs  types.rs  utils.rs
fool-engine/src/save/: mod.rs
fool-engine/src/scheduler/: frameid.rs  mod.rs  scheduler.rs
fool-engine/src/script/: engine.rs  mod.rs
fool-engine/src/script/audio/: mod.rs
fool-engine/src/script/graphics/: mod.rs  sprite.rs  types.rs  window.rs
fool-engine/src/script/gui/: binding.rs  mod.rs  types.rs  utils.rs
fool-engine/src/utils/: dir.rs  macros.rs  mod.rs
fool-graphics/: Cargo.toml
fool-graphics/src/: lib.rs  main.rs  scheduler.rs  test.rs
fool-graphics/src/canvas/: draw.rs  fontmanager.rs  graph.rs  image.rs  mod.rs  node.rs  node_kind.rs  style.rs  text.rs  utils.rs
fool-graphics/src/canvas/font/: mod.rs  types.rs
fool-graphics/src/canvas/sprite/: animation.rs  frame.rs  mod.rs  scheduler.rs
fool-graphics/src/gui/: mod.rs
fool-graphics/src/render/: capture.rs  context.rs  frame.rs  mod.rs  scene.rs
fool-resource/: Cargo.toml
fool-resource/src/: fallback.rs  lib.rs  main.rs  resource.rs  types.rs
fool-script/: Cargo.toml  core_mod.lua  init_mod.lua  main.lua  test_module.lua
fool-script/src/: lib.rs  macros.rs  main.rs  thread.rs  utils.rs
fool-script/src/dslmod/: dsl.rs  macros.rs  mod.rs
fool-script/src/memmod/: memmod.rs  mod.rs
fool-script/src/modules/: dsl.rs  fs.rs  memory.rs  mod.rs  ser.rs  stdlib.rs  userdata.rs
fool-script/src/thread/: fullchannel.rs  mod.rs  task.rs  thread.rs
fool-window/: Cargo.toml
fool-window/src/: lib.rs
fool-window/src/window/: app.rs  event.rs  mod.rs  proxy.rs
fool-window/src/window/input/: current.rs  helper.rs  mod.rs
nannou/: .cargo_vcs_info.json  Cargo.toml
nannou/src/: app.rs
nannou/src/draw/primitive/: mesh.rs
packtool/: Cargo.toml
packtool/src/: lib.rs  main.rs  tee.rs
patch/color-0.3.1/: .cargo_vcs_info.json  .clippy.toml  Cargo.toml  Cargo.toml.orig  README.md  make_x11_colors.py
patch/color-0.3.1/examples/: gradient.rs  interp.rs  parse.rs
patch/color-0.3.1/src/: cache_key.rs  chromaticity.rs  color.rs  colorspace.rs  dynamic.rs  flags.rs  floatfuncs.rs  gradient.rs  impl_bytemuck.rs  lib.rs  parse.rs  rgba8.rs  serialize.rs  tag.rs  x11_colors.rs
patch/color-0.3.1/src/palette/: css.rs  mod.rs
rolllog/: Cargo.toml
rolllog/src/: lib.rs  startuproll.rs
