[workspace]
resolver = "1"
members = ["engine", "packtool", "rolllog"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
chrono = {version = "0.4.41", features = ["serde"]}
lazy_static = { version = "1.5.0" }
rapier2d = { version = "0.25.1", features = ["serde-serialize"] }
zip = { version = "4.0.0", default-features = true }
zstd = { version = "0.13.3" }
sha2 = { version = "0.10.9" }
hex = {version = "0.4.3"}
bincode = { version = "1.3.3" }
walkdir = "2"
path-slash = "0.2"
mlua = { version = "0.10.3", features = [
    "lua54",
    "userdata-wrappers",
    "serialize",
    "macros",
    "vendored",
] }
prettytable = "0.10.0"
byte-unit = "5.1.6"
#log
log4rs = { version = "1.3.0", features = [
    "gzip",
    "console_appender",
    "file_appender",
    "rolling_file_appender",
] }
log = "0.4.22"
rolllog = { path = "rolllog"}
find_folder ={ version = "0.3.0"}
clap = { version = "4.5.13", features = ["derive"] }
#graphics
nannou = { version = "0.19.0" }
nannou_egui = { version = "0.19.0" }

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"
