[workspace]
resolver = "1"
members = ["fool-engine", "packtool", "rolllog", "fool-graphics", "fool-script"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
chrono = {version = "0.4.41", features = ["serde"]}
lazy_static = { version = "1.5.0" }
rapier2d = { version = "0.25.1", features = ["serde-serialize"] }
zstd = { version = "0.13.3" }
sha2 = { version = "0.10.9" }
hex = {version = "0.4.3"}
bincode = { version = "1.3.3" }
walkdir = "2"
path-slash = "0.2"
mlua = { version = "0.10.5", features = [
    "lua54",
    "userdata-wrappers",
    "serialize",
    "macros",
    "vendored",
] }
#tools
find_folder ={ version = "0.3.0"}
clap = { version = "4.5.13", features = ["derive"] }
prettytable = "0.10.0"
byte-unit = "5.1.6"
parking_lot = "0.12.3"
#log
log4rs = { version = "1.3.0", features = [
    "gzip",
    "console_appender",
    "file_appender",
    "rolling_file_appender",
] }
log = "0.4.22"
rolllog = { path = "rolllog"}
#graphics
winit = { version = "0.30.11", features = ["serde"]}
egui-winit = {version = "0.31.1"}
egui = {version = "0.31.1"}
egui_extras = { version = "0.31.1", features = ["image", "serde"] }
egui-wgpu = { version = "0.31.1",features = ["winit"] }
wgpu = {version = "24.0.5"}
image = {version = "0.25.6"}
[profile.release]
opt-level = "z"
strip = true
lto = "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"
