[package]
name = "engine"
version = "0.1.0"
edition = "2021"
[lib]
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
log4rs = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
rapier2d = { workspace = true }
zip = { workspace = true }
clap = { workspace = true }
#graphics
nannou = { workspace = true }
nannou_egui = { workspace = true }
winit = { version = "0.28.7", optional = true }
egui = { version = "0.23.0", optional = true }
epaint = { version = "0.23.0", optional = true }
lyon_tessellation = { version = "0.17.10", optional = true }

[features]
default = [
    "lyon_tessellation/serialization",
    "winit/serde",
    "egui/serde",
    "epaint/serde",
]
