[package]
name = "fool-graphics"
version = "0.1.0"
edition = "2024"

[lib]
name = "fool_graphics"
path = "src/lib.rs"

[dependencies]
winit = { workspace = true}
wgpu = {workspace = true}
pollster = {version = "0.4.0"}
vello = {workspace = true}
vello_encoding = {workspace = true}
image = {workspace = true}
anyhow ={ workspace = true}
egui-winit = {workspace = true}
egui = {workspace = true}
egui-wgpu = { workspace = true }
serde = { workspace = true}
log = { workspace = true }
# Text
parking_lot = {workspace = true}
skrifa ={ workspace = true}
bytemuck = {version = "1.23.0"}
ordered-float = "5.0.0"
fool-resource = { path = "../fool-resource"}
kurbo = {version = "0.11.2", optional = true}
peniko = {version = "0.4.0", optional = true}
[features]
default = ["kurbo/serde", "peniko/serde"]
graph_debug = []

[dependencies.rusttype]
version = "0.9.3"
features = ["gpu_cache"]