[package]
name = "fool-window"
version = "0.1.0"
edition = "2024"

[lib]
name = "fool_window"
path = "src/lib.rs"

[dependencies]
winit ={ workspace = true}
anyhow = { workspace = true }
serde = { workspace = true }
toml = {workspace = true}
image ={ workspace = true}
log = { workspace = true }
dyn-clone = {workspace = true}